--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,17 @@
 	<title></title>
 </head>
 <body>
-	<p>
-		Welcome to the chat_app</p>
+	<p>Welcome to the chat_app</p>
+
+	<form id="message-form">
+		<input type="text" name="message" placeholder="Message">
+		<button type="submit" id="submit-btn">Send</button>
+		<button type="submit" id="send-location">Send Location</button>
+	</form>
+	<textarea style="width:100%; height:500px" id = "textfield"></textarea>
+	<script src="/js/app.js"></script>
+	<script src = "/socket.io/socket.io.js"></script>
+	<script src = "/js/index.js"></script>
+	<script src = "/js/lib/moment.js"></script>
 </body>
 </html>
